<resources>

    <string name="app_name">Bat Recorder</string>
    <string name="menu_settings">Settings</string>
    <string name="locales">Language Localization</string>
    <string name="locale_change">You will need to restart the app for this change to take effect.</string>
    <string name="archive_title">Recordings</string>
    <string name="load_file">Loading</string>
    <string name="checking_license">Checking license…</string>
    <string name="license_verify_problem">Sorry, but there was a problem verifying your license.</string>
    <string name="permissions_verify_problem">Sorry, but the required app permissions have not been granted.</string>
    <string name="mic_init">Looking for a supported USB microphone…</string>
    <string name="mic_init_pettersson">Looking for a Pettersson microphone…</string>
    <string name="mic_init_dodotronic">Looking for a Dodotronic microphone…</string>
    <string name="no_mic">A supported USB microphone was not detected. Make sure a USB OTG compatible cable is firmly attached, or press \'Continue\' to use the non-ultrasonic device microphone.</string>
    <string name="quit">Quit</string>
    <string name="playback_only">Continue</string>
    <string name="app_version">Bat Recorder version:</string>
    <string name="version">version</string>
    <string name="usb_detach">The connection to the USB microphone has been lost. Make sure the USB microphone cable is firmly attached, or press \'Continue\' to use the non-ultrasonic device microphone.</string>
	<string name="open_file_fail">There was a problem opening the selected WAV file.</string> 
	<string name="fft_window">FFT Window size</string>
    <string name="analysis_cat">Analysis</string>
    <string name="general_cat">General</string>
    <string name="geo_cat">Geolocation</string>
    <string name="trigger_cat">Recording</string>
    <string name="trigger_db">Trigger intensity threshold</string>
	<string name="trigger_post">Post trigger</string>
	<string name="trigger_pre">Pre trigger</string>
	<string name="help">User Manual…</string>
    <string name="storage">Store recordings on SD card</string>
	<string name="geotag">Geotag WAV files</string>
    <string name="geofreq">GPS Update frequency</string>
    <string name="geodist">GPS Update minimum distance</string>
    <string name="dropped">samples were dropped!</string>
    <string name="share">Share recording using</string>
    <string name="close_app">Quit Bat Recorder?</string>
    <string name="delete_file">Are you sure you want to delete</string>
    <string name="delete">Delete Recording</string>
    <string name="rename">Rename Recording</string>
    <string name="export">Export Clip</string>
    <string name="saved">Clip has been saved.</string>
    <string name="already_exists">A file with that name already exists.</string>
    <string name="empty_name">A file name cannot be blank.</string>
    <string name="created_xmp">The metadata file was successfully created.</string>
    <string name="expansion">Expansion Factor</string>
    <string name="timer_cat">Listening Timer</string>
    <string name="timer_on">Listening Duration</string>
    <string name="timer_off">Sleep Interval</string>
    <string name="timer_unit">minute</string>
    <string name="timer_units">minutes</string>
    <string name="alarm_on">Listening Timer is running…</string>
    <string name="alarm_quit">Stop Timer</string>
    <string name="googleplay_missing">Google Play Services must be installed to enable the map view.</string>
    <string name="googleplay_update">Google Play Services must be updated to enable the map view.</string>
    <string name="notify_cat">Trigger Notification</string>
    <string name="sms">Send SMS message when triggered</string>
    <string name="sms_recp">SMS message recipient</string>
    <string name="email">Send email when triggered</string>
    <string name="email_recp">Email recipient</string>
    <string name="triggered">Bat Recorder triggered</string>
    <string name="loading_help">Loading online user manual…</string>
    <string name="reply_email">Choose reply address for notification email.</string>
    <string name="reply">Reply address:</string>
    <string name="mini_mic">Choose the miniMIC model:</string>
    <string name="prebuffer">saving buffer…</string>
    <string name="capture">Listening buffer length</string>
    <string name="species">Choose species:</string>
    <string name="export_file">Export Recording</string>
    <string name="export_file_fail">There was a problem exporting the selected recording.</string>
    <string name="export_file_succeed">The recording has been successfully exported.</string>
    <string name="not_ultrasonic">Other playback modes are only valid for ultrasonic recordings.</string>
    <string name="unsupported">The attached USB device is unsupported.</string>
    <string name="samplerate">Microphone sampling rate</string>
    <string name="maxlength">Maximum recording length</string>
    <string name="logscale">Logarithmic frequency scale</string>
    <string name="metadata">Metadata format</string>
    <string name="het_freq">Heterodyne frequency range</string>
    <string name="trigger_freq">Trigger frequency range</string>
    <string name="gridlines">Show frequency grid lines</string>
    <string name="analyzing">Analyzing spectrogram…</string>
    <string name="recording">recording</string>
    <string name="recordings">recordings</string>
    <string name="refresh">Live spectrogram display</string>
    <string name="statusbar">Always show Android system bars</string>
    <string name="debuglog">USB debug log</string>
    <string name="debugsum">Must restart app to take effect</string>
    <string name="ultramodes">Enable all playback modes for non-ultrasonic signals</string>
    <string name="exporting">exporting</string>
    <string name="nightMode">Night Mode</string>
    <string name="triggerOnly">Only display triggered events</string>
    <string name="not_show">Do not show again</string>
    <string name="sdcard_title">Warning</string>
    <string name="use_sdcard">Use SD Card</string>
    <string name="sdcard_warning">Recordings stored on the SD card will be automatically deleted by the Android OS if you uninstall the BatRecorder app. Please make sure to back up any recordings you wish to retain.</string>
    <string name="stereo_warning">is a stereo recording. Only one channel can be loaded. Please select:</string>
    <string name="channel1">Channel 1</string>
    <string name="channel2">Channel 2</string>
    <string name="file_too_long">File too large. Limited to</string>
    <string name="cont_rec">Continuous recording</string>
    <string name="hardware_btns">Trigger using volume buttons</string>
    <string name="shake_rec">Toggle recording by shaking</string>
    <string name="het_adj">Heterodyne tone</string>
    <string name="requestLicense">Request</string>
    <string name="purchase">Recording requires a license.</string>
    <string name="license_msg1">I would like to request a Bat Recorder license for this Android device (hardware ID: </string>
    <string name="license_msg2">).</string>
</resources>